--- a/components/alert.html
+++ b/components/alert.html
@@ -62,7 +62,7 @@
     <section class="page-header">
       <div class="container">
         <div class="breadcrumb">
-          <a href="/components.html">Components</a>
+          <a href="/components.html#feedback">Components</a>
           <i class="fas fa-chevron-right"></i>
           <span>Alert</span>
         </div>
@@ -606,7 +606,7 @@
           <div class="footer-links">
             <h4>Product</h4>
             <ul>
-              <li><a href="/components.html">Components</a></li>
+              <li><a href="/components.html#feedback">Components</a></li>
               <li><a href="/docs.html">Documentation</a></li>
             </ul>
           </div>
