--- a/components/buttons.html
+++ b/components/buttons.html
@@ -65,13 +65,13 @@
     <section class="page-header">
       <div class="container">
         <div class="breadcrumb">
-          <a href="/components.html">Components</a>
+          <a href="/components.html#inputs">Components</a>
           <i class="fas fa-chevron-right"></i>
           <span>Buttons</span>
         </div>
         <h1 class="page-title">Buttons</h1>
         <p class="page-description">
-          Beautiful animated buttons with modern effects from test.html.
+          Beautiful animated buttons with modern effects.
         </p>
       </div>
     </section>
@@ -1568,7 +1568,7 @@
           <div class="footer-links">
             <h4>Product</h4>
             <ul>
-              <li><a href="/components.html">Components</a></li>
+              <li><a href="/components.html#inputs">Components</a></li>
               <li><a href="/docs.html">Documentation</a></li>
               <li><a href="#">Changelog</a></li>
             </ul>
